tests/baselines/reference/getJavaScriptSyntacticDiagnostics13.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics13.ts':
/tests/cases/fourslash/a.js(1,8): error TS8010: Type annotations can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    var v: () => number;
           ~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.